2003-02-20	Till Straumann <strauman@slac.stanford.edu>

	PR 349/bsps
	* vme/.cvsignore, vme/Makefile.am, vme/VME.h, vme/VMEConfig.h,
	vme/vmeconfig.c: Add glue to the powerpc/shared BSP to use
	the vmeUniverse VME-PCI bridge driver.

2003-02-20	Till Straumann <strauman@slac.stanford.edu>

	PR 349/bsps
	* console/console.c, console/uart.c, console/uart.h: implement
	IOCTLs for the serial (UART) console to install/retrieve a BREAK-IRQ
	callback.  The callback routine (if installed) is invoked from the
	UART ISR when a BREAK interrupt is detected.  This can be used
	e.g. to enforce a "hotkey" reboot a la vxWorks Ctrl-X (although we
	use the serial line break condition) NOTE: The callback runs in
	ISR context.  

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds*: Add FreeBSD sysctl() sections.

2002-12-08	Greg Menke <gregory.menke@gsfc.nasa.gov>
  
	* bootloader/head.S: Added support for optional debug via PPCbug.
	Also turn off mmu/caches for the bootstrap phase, which seems to
	cause trouble with the 603.  The cpu init functions in the bsp
	get all that stuff going properly.

2002-12-19	Joel Sherrill <joel@OARcorp.com>

	* console/console.c: Removed __assert() which conflicts with newlib.

2002-11-17	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* irq/irq_init.c, motorola/motorola.c: Support for MTX603e.

2002-10-31	Joel Sherrill <joel@OARcorp.com>

	* bootloader/em86.c, console/inch.c, console/polled_io.c, irq/irq.c,
	motorola/motorola.c, pci/detect_raven_bridge.c,
	vectors/vectors_init.c: Removed warnings.

2002-07-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootloader/em86real.S: Fix syntax error in comment near line 1185.

2001-05-14	Till Straumann <strauman@slac.stanford.edu>

	* bootloader/misc.c, console/Makefile.am, console/console.c,
	console/consoleIo.h, console/inch.c, console/polled_io.c,
	console/uart.c, console/uart.h, include/bsp.h, irq/Makefile.am,
	irq/irq.c, irq/irq.h, irq/irq_init.c, openpic/openpic.c,